feat: Add Mulish font, new icons, leader sidebar, and login page
- Integrated Mulish font into the project
- Added new icons for the UI
- Created a sidebar for the leader role
- Developed a new login page

--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,12 @@
 .App {
 	text-align: center;
 }
-
+@font-face {
+	font-family: 'Mulish';
+	src: url('/public/Mulish-VariableFont_wght.ttf') format('truetype');
+	font-weight: normal;
+	font-style: normal;
+}
 .App-logo {
 	height: 40vmin;
 	pointer-events: none;
