--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,13 @@
 	font-weight: normal;
 	font-style: normal;
 }
-.App-logo {
+@font-face {
+	font-family: 'Source Sans Pro';
+	src: url('/public/SourceSansPro-Light.otf') format('opentype');
+	font-weight: normal;
+	font-style: normal;
+}
+.Ap .App-logo {
 	height: 40vmin;
 	pointer-events: none;
 }
